src/app/shared/header/header.component.scss
/* ... */
.noWarning {
  display: none;
}

.header_sign-up-btn {
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px solid var(--primary-green);
  color: var(--primary-green);
  height: 36px;

  span {
    padding: 0 24px;
    font-size: 11px;
    line-height: 12px;
    font-weight: 600;
  }
}

header {
  width: 100vw;
  position: fixed;
  top: 0;
  background: $white-color;
  z-index: 5;
  text-transform: uppercase;
  font-size: 14px;

  .warning {
    margin: 0 auto;
    max-width: 100%;
    background-color: #507900;

    .warning_massage {
      margin: 0 auto;
      padding: 0 130px;
      width: 1440px;
      height: 51px;
      display: flex;
      flex-wrap: nowrap;
      justify-content: space-between;
      align-items: center;

      span {
        font-family: var(--ubs-secondary-font);
        font-style: normal;
        font-weight: 600;
        font-size: 14px;
        line-height: 17px;
        color: #fcfcfc;
      }

      .warning_button_comment {
        padding: 7px 25px;
        border-radius: 5px;
        font-family: var(--ubs-secondary-font);
        font-style: normal;
        font-weight: 600;
        font-size: 11px;
        line-height: 13px;
        text-transform: uppercase;
      }
    }
  }
}

.ubs-header_sign-up-btn {
  width: 234px;
  height: 36px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  background-color: var(--ubs-secondary-light-green);
  border: 2 solid var(--ubs-secondary-light-green);
  border-radius: 6px;
  color: var(--ubs-primary-white);

  &:hover {
    background-color: var(--ubs-tertiary-dark-green);
    border: 2px solid var(--ubs-tertiary-dark-green);
    cursor: pointer;
  }
}

.primary-global-button:focus,
.secondary-global-button:focus,
.tertiary-global-button:focus {
  border: unset !important;
}

.header_sign-in-link {
  font-size: 12px;
  font-weight: 600;
  width: 70px;
  padding: 0 12px;

  a {
    color: var(--secondary-dark-green);
    display: block;
    min-width: 40px;
  }
}

.burger-modal_open {
  box-shadow: none;

  .header_sign-in-link {
    font-size: 14px;
    line-height: 16px;
    width: fit-content;
    padding: 0 40px;
    color: var(--secondary-dark-green);
  }

  .header_mobile-menu-sign-in {
    width: fit-content;
    margin: 35px 0 30px;
  }

  .header_sign-up-btn {
    font-size: 14px;
    line-height: 16px;
    height: 100%;
  }

  .header_mobile-menu-sign-up {
    width: fit-content;
    height: 48px;
    font-weight: 600;
    font-size: 14px;
    line-height: 16px;

    div span {
      font-weight: 600;
      font-size: 14px;
      line-height: 16px;
    }
  }
}

.header_sign-up-link {
  font-size: 12px;

  a {
    color: var(--secondary-dark-green);
  }
}

.ubs-header-sign-in {
  display: flex;
  width: 145px;
  height: 36px;
  justify-content: center;
  align-items: center;
  color: var(--ubs-primary-black);
  border: 2px solid #87bc1e;
  border-radius: 6px;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;

  &:hover {
    color: var(--ubs-secondary-light-green);
    text-decoration: none;
  }
}

.header_logo {
  margin-right: 24px;
}

.header_navigation-menu-right-list {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  list-style-type: none;
  height: 100%;
  margin: 0;
  padding: 0;

  li {
    height: 100%;
    padding: 10px 12px;
    display: flex;
    align-items: center;
  }

  li.header_sign-up-link {
    padding-right: 0;
  }
}

.dropdown {
  background-color: $white-color;
  list-style-type: none;
  padding: 0;
  position: absolute;
  top: 41px;
  width: 150px;
  display: flex;
  flex-direction: column;
  right: -15px;
  align-items: flex-start;

  li {
    position: relative;
    color: var(--ubs-primary-black);

    a {
      display: block;
      padding: 10px;
      width: 100%;
    }
  }
}

.header_navigation-menu-left-col {
  padding-top: 25px;
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 60px;
  left: 0;
  width: 100%;
  height: 100%;
  background: $white-color;
  transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
  box-shadow: 0 4px 5px -2px rgba(73, 74, 73, 0.2);
  overflow-y: auto;

  ul {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0;
    overflow: hidden;
    padding: 0;
    width: 100%;
    height: 550px;

    .pick-up-service {
      height: 52px;
    }

    li {
      height: 52px;
      width: 100%;
      max-width: 300px;
      display: flex;
      justify-content: center;
      align-items: center;
    }

    a {
      display: flex;
      justify-content: center;
      align-items: center;
      width: 100%;
      height: 100%;
      font-size: 20px;
      color: var(--primary-dark-grey);
    }
  }
}

.header_navigation-menu-left {
  display: none;

  ul {
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: space-between;

    li {
      display: flex;
      align-items: center;
      margin-left: 24px;

      &:first-child {
        margin-left: 0;
      }

      &:nth-child(4) {
        display: none;
      }

      a {
        font-size: 14px;
        line-height: 16px;
        color: var(--primary-dark-grey);
      }
    }

    .header_mobile-menu-item {
      display: none;
      font-weight: 600;
    }
  }
}

.header_sign-up-link a:hover {
  text-decoration-line: none;
}

.header-logo {
  display: flex;
  align-items: center;

  a img {
    max-width: 100%;
  }
}
/* ... */

